--- a/web_application/index.html
+++ b/web_application/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <link href="external/bootstrap-3.3.7/css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="external/bootstrap-select.css" rel="stylesheet" type="text/css">
+  <link href="external/codemirror/codemirror.css" rel="stylesheet" type="text/css">
+  <link href="external/codemirror/darcula.css" rel="stylesheet" type="text/css">
   <script type="text/javascript" src="external/jquery-3.3.1.js"></script>
   <script type="text/javascript" src="external/bootstrap-3.3.7/js/bootstrap.js"></script>
   <script type="text/javascript" src="external/bootstrap-select.js"></script>
+  <script type="text/javascript" src="external/codemirror/codemirror.js"></script>
+  <script type="text/javascript" src="external/codemirror/javascript.js"></script>
+  <script type="text/javascript" src="external/codemirror/active-line.js"></script>
+  <script type="text/javascript" src="external/codemirror/matchbrackets.js"></script>
   <script type="text/javascript" src="scripts/internal/templateTestTask.js"></script>
   <script type="text/javascript" src="scripts/view/templateTestTask.js"></script>
   <script type="text/javascript" src="scripts/common.js"></script>
@@ -17,6 +23,9 @@
       window.templateTestView.initialize('templateTestTaskEditor');
     });
   </script>
+  <style>
+    .CodeMirror {border: 1px solid black; font-size:13px}
+  </style>
 </head>
 <body>
 <div class="container" id="templateTestTaskEditor">
