web-application: remove window var redundant.

--- a/web_application/index.html
+++ b/web_application/index.html
@@ -20,8 +20,8 @@
   <script type="text/javascript">
     $(document).ready(function () {
       window.debugStatus = true;
-      window.templateTestViewWeb = new TemplateTestTaskWeb();
-      window.templateTestViewWeb.initialize('templateTestTaskEditor');
+      let templateTestViewWeb = new TemplateTestTaskWeb();
+      templateTestViewWeb.initialize('templateTestTaskEditor');
     });
   </script>
   <style>
