desktop_client: add 'Editor template test'.

--- a/desktop_client/editorTTT.html
+++ b/desktop_client/editorTTT.html
@@ -54,6 +54,10 @@
         templateTestViewWeb.saveTTT(fileName);
       };
 
+      globalShortcut.unregister('CommandOrControl+O');
+      globalShortcut.unregister('CommandOrControl+S');
+      globalShortcut.unregister('CommandOrControl+Shift+S');
+
       globalShortcut.register('CommandOrControl+O', openAction);
       globalShortcut.register('CommandOrControl+S', saveAction);
       globalShortcut.register('CommandOrControl+Shift+S', saveAsAction);
