server: add registration. server/mysql: update scheme. web_application: add registration confirm.

--- a/web_application/index.html
+++ b/web_application/index.html
@@ -27,35 +27,31 @@
       navigation.initializeMenu();
       //navigation.test();
 
-//      let templateTestViewWeb = new TemplateTestTaskWeb();
-//      templateTestViewWeb.initialize('templateTestTaskEditor');
 //      Cookies.set('test_cookie', 'qwerty');
-//      $.post( "/test_post?a=3&b=5&v=asddasda", { test_var: "value"})
-//        .done(function (answer) {
-//          console.log('done');
-//          console.log(answer);
-//        })
-//        .fail(function (answer) {
-//          console.log('fail');
-//          console.log(answer);
-//        })
-//        .always(function () {
-//        });
-//      $.get( "/test_get?a=3&b=5&v=asddasda")
-//        .done(function (answer) {
-//          console.log('done');
-//          console.log(answer);
-//        })
-//        .fail(function (answer) {
-//          console.log('fail');
-//          console.log(answer);
-//        })
-//        .always(function () {
-//        });
     });
   </script>
   <style>
     .CodeMirror {border: 1px solid black; font-size:13px}
+    .center-position-30-7 {
+      top: 50%;
+      left: 50%;
+      width:30em;
+      height:7em;
+      margin-top: -3.5em;
+      margin-left: -15em;
+      border: 1px solid #ccc;
+      position:fixed;
+    }
+    .center-position-40-17 {
+      top: 50%;
+      left: 50%;
+      width:40em;
+      height:17em;
+      margin-top: -8.5em;
+      margin-left: -20em;
+      border: 1px solid #ccc;
+      position:fixed;
+    }
     .center-position-25-7 {
       top: 50%;
       left: 50%;
