--- a/web_application/index.html
+++ b/web_application/index.html
@@ -26,12 +26,44 @@
       let navigation = new NavigationView();
       navigation.initializeMenu();
       //navigation.test();
-
-//      Cookies.set('test_cookie', 'qwerty');
     });
   </script>
   <style>
     .CodeMirror {border: 1px solid black; font-size:13px}
+    .workspace-position {
+      margin-top: 100px;
+      height:50em;
+      border: 1px solid #ccc;
+    }
+    .user-menu-position {
+      top: 2%;
+      left: 50%;
+      width:40em;
+      height:4em;
+      margin-top: -2em;
+      margin-left: -20em;
+      position:fixed;
+    }
+    .center-position-30-9 {
+      top: 50%;
+      left: 50%;
+      width:30em;
+      height:9em;
+      margin-top: -4.5em;
+      margin-left: -15em;
+      border: 1px solid #ccc;
+      position:fixed;
+    }
+    .center-position-24-18 {
+      top: 50%;
+      left: 50%;
+      width:24em;
+      height:18em;
+      margin-top: -9em;
+      margin-left: -12em;
+      border: 1px solid #ccc;
+      position:fixed;
+    }
     .center-position-30-7 {
       top: 50%;
       left: 50%;
