--- a/web_application/index.html
+++ b/web_application/index.html
@@ -29,6 +29,9 @@
     });
   </script>
   <style>
+    .choice-ttt-panel {
+
+    }
     .CodeMirror {border: 1px solid black; font-size:13px}
     .workspace-position {
       margin-top: 100px;
@@ -54,6 +57,7 @@
       border: 1px solid #ccc;
       position:fixed;
     }
+    .left-buffer-45 { margin-left:45px; }
     .left-buffer-30 { margin-left:30px; }
     .left-buffer-20 { margin-left:20px; }
     .top-buffer-20 { margin-top:20px; }
