--- a/desktop_client/editorTemplateTest.html
+++ b/desktop_client/editorTemplateTest.html
@@ -108,6 +108,12 @@
   </script>
 </head>
 <style>
+  .left-buffer-45 { margin-left:45px; }
+  .left-buffer-30 { margin-left:30px; }
+  .left-buffer-20 { margin-left:20px; }
+  .top-buffer-20 { margin-top:20px; }
+  .top-buffer-15 { margin-top:10px; }
+  .bottom-buffer { margin-bottom:10px; }
   .left-buffer { margin-left:20px; }
   .top-buffer { margin-top:10px; }
 </style>
