--- a/web_application/index.html
+++ b/web_application/index.html
@@ -57,12 +57,15 @@
       border: 1px solid #ccc;
       position:fixed;
     }
+    .right-buffer-30 { margin-right:30px; }
     .left-buffer-45 { margin-left:45px; }
     .left-buffer-30 { margin-left:30px; }
     .left-buffer-20 { margin-left:20px; }
     .top-buffer-20 { margin-top:20px; }
     .top-buffer-15 { margin-top:10px; }
     .bottom-buffer { margin-bottom:10px; }
+    .btn-black{background-color:#000;color: #FFF;}
+    .btn-black:hover{color: #3E4551;}
     [hidden] {
       display: none !important;
     }
