web_application: add interface for tasks and group tasks.

--- a/web_application/index.html
+++ b/web_application/index.html
@@ -17,7 +17,10 @@
   <script type="text/javascript" src="scripts/internal/validator.js"></script>
   <script type="text/javascript" src="scripts/view/navigation.js"></script>
   <script type="text/javascript" src="scripts/view/editors/template_test_task.js"></script>
+  <script type="text/javascript" src="scripts/view/editors/template_aggregate.js"></script>
   <script type="text/javascript" src="scripts/view/editors/template_test.js"></script>
+  <script type="text/javascript" src="scripts/view/editors/template_task.js"></script>
+  <script type="text/javascript" src="scripts/view/editors/template_group_task.js"></script>
   <script type="text/javascript" src="scripts/common.js"></script>
   <script type="text/javascript" src="scripts/internal/generator.js"></script>
   <script type="text/javascript">
@@ -39,8 +42,8 @@
     }
     .user-menu-position {
       top: 2%;
-      left: 50%;
-      width:40em;
+      left: 35%;
+      width:70em;
       height:4em;
       margin-top: -2em;
       margin-left: -20em;
