--- a/web_application/index.html
+++ b/web_application/index.html
@@ -66,6 +66,7 @@
     .left-buffer-20 { margin-left:20px; }
     .top-buffer-20 { margin-top:20px; }
     .top-buffer-15 { margin-top:10px; }
+    .top-buffer-7 { margin-top:7px; }
     .bottom-buffer { margin-bottom:10px; }
     .btn-black{background-color:#000;color: #FFF;}
     .btn-black:hover{color: #3E4551;}
@@ -75,6 +76,18 @@
     .template-status-button-position {
       top:90%;
       left:75%;
+    }
+    .lb-sm {
+      font-size: 12px;
+    }
+    .lb-md {
+      font-size: 16px;
+    }
+    .lb-lg {
+      font-size: 20px;
+    }
+    .border {
+      border:1px solid #cecece;
     }
   </style>
 </head>
