web_application: refactoring template editors.

--- a/web_application/index.html
+++ b/web_application/index.html
@@ -16,6 +16,7 @@
   <script type="text/javascript" src="external/codemirror/matchbrackets.js"></script>
   <script type="text/javascript" src="scripts/internal/validator.js"></script>
   <script type="text/javascript" src="scripts/view/navigation.js"></script>
+  <script type="text/javascript" src="scripts/view/editors/template.js"></script>
   <script type="text/javascript" src="scripts/view/editors/template_test_task.js"></script>
   <script type="text/javascript" src="scripts/view/editors/template_aggregate.js"></script>
   <script type="text/javascript" src="scripts/view/editors/template_test.js"></script>
